[package]
name = "tokio-more"
version = "0.1.0"
authors = ["Carl Lerche <me@carllerche.com>"]

[dependencies]
futures = { git = "https://github.com/alexcrichton/futures-rs" }
tokio-core = { git = "https://github.com/tokio-rs/tokio-core" }
bytes = { git = "https://github.com/carllerche/bytes" }
byteorder = "0.5"

[dev-dependencies]
fixture-io = { git = "https://github.com/carllerche/fixture-io" }

[replace]
"tokio-core:0.1.0" = { git = "https://github.com/tokio-rs/tokio-core" }
"futures:0.1.3" = { git = "https://github.com/alexcrichton/futures-rs" }
